--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "start": "node dist/server.js",
         "dev": "npx nodemon",
-        "test": "NODE_ENV=test jest --runInBand --verbose",
+        "test": "NODE_ENV=test DOTENV_CONFIG_PATH=./_test.env jest --setupFiles dotenv/config --runInBand --verbose",
         "clean": "rm -r _app; rm -r dist",
         "build": "npm install && npx tsc && npm install --prefix app_funds && npm run build --prefix app_funds && cp -r app_funds/build ./_app",
         "docker": "docker compose up -d --build && docker image prune -f",
