--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@types/koa": "^2.13.4",
         "@types/koa__router": "^8.0.11",
         "@types/koa-bodyparser": "^4.3.7",
+        "@types/koa-static": "^4.0.2",
         "@types/lodash": "^4.14.182",
         "jest": "^28.1.1",
         "nodemon": "^2.0.18",
