--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
     app_funds:
-        build: .
+        build: ./docker/node
         image: archvile/app_funds
         container_name: app_funds
         depends_on:
@@ -14,7 +14,7 @@ services:
         networks:
             - backend
     postgres:
-        build: ./_postgres
+        build: ./docker/postgres
         image: archvile/postgres
         container_name: postgres
         restart: always
