move certificate location

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "start": "node dist/server.js",
         "dev": "npx nodemon",
         "test": "NODE_ENV=test DOTENV_CONFIG_PATH=./_test.env jest --setupFiles dotenv/config --runInBand --verbose",
-        "clean": "rm -r docker/node/tmp/_app; rm -r dist; rm -r docker/node/tmp/dist; rm -r docker/node/tmp/_ssl; rm docker/node/tmp/package*.json",
-        "build": "npm install && npx tsc && cp -r dist docker/node/tmp/dist && npm install --prefix app_funds && npm run build --prefix app_funds && cp -r app_funds/build ./docker/node/tmp/_app && cp -r _ssl ./docker/node/tmp/_ssl && cp package*.json ./docker/node/tmp/",
+        "clean": "rm -r docker/node/tmp/_app; rm -r dist; rm -r docker/node/tmp/dist; rm docker/node/tmp/package*.json",
+        "build": "npm install && npx tsc && cp -r dist docker/node/tmp/dist && npm install --prefix app_funds && npm run build --prefix app_funds && cp -r app_funds/build ./docker/node/tmp/_app && cp package*.json ./docker/node/tmp/",
         "docker": "docker compose up -d --build && docker image prune -f",
         "resetdb": "psql postgresql://postgres:pw20220501@localhost:5432/app_funds -c 'drop schema public cascade; create schema public;'",
         "initdb": "npx ts-node src/database/initializeDB.ts",
