--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,9 @@ services:
         container_name: nginx_node
         depends_on:
             - app_funds
-        deploy:
-            restart_policy:
-                condition: on-failure
-                delay: 5s
-                max_attempts: 3
-                window: 120s
+        restart: "no"
         ports:
-            - "8001:80"
+            - "8001:443"
         volumes:
             - static:/home/static
             - ssh_keys:/home/ssh_keys
