--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -3,7 +3,6 @@ upstream koa {
 }
 
 server {
-
     listen 80;
 
     location /api/v1/ {
@@ -17,5 +16,28 @@ server {
     location / {
         alias /home/static/;
     }
+}
 
+server {
+    listen 443 ssl;
+    keepalive_timeout 70;
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers AES128-SHA:AES256-SHA:RC4-SHA:DES-CBC3-SHA:RC4-MD5;
+    ssl_certificate /home/ssh_keys/app.crt;
+    ssl_certificate_key /home/ssh_keys/app.pem;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
+    location /api/v1/ {
+        proxy_pass https://koa;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
+    }
+
+    location / {
+        alias /home/static/;
+    }
 }
