--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -2,21 +2,23 @@ upstream koa {
     server app_funds:3000;
 }
 
-server {
-    listen 80;
+ssl_password_file /etc/keys/global.pass;
 
-    location /api/v1/ {
-        proxy_pass https://koa;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_redirect off;
-    }
+# server {
+#     listen 80;
 
-    location / {
-        alias /home/static/;
-    }
-}
+#     location /api/v1/ {
+#         proxy_pass https://koa;
+#         proxy_set_header Host $http_host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_redirect off;
+#     }
+
+#     location / {
+#         alias /home/static/;
+#     }
+# }
 
 server {
     listen 443 ssl;
@@ -24,8 +26,8 @@ server {
 
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers AES128-SHA:AES256-SHA:RC4-SHA:DES-CBC3-SHA:RC4-MD5;
-    ssl_certificate /home/ssh_keys/app.crt;
-    ssl_certificate_key /home/ssh_keys/app.pem;
+    ssl_certificate /home/ssh_keys/cert.pem;
+    ssl_certificate_key /home/ssh_keys/cert.key;
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
