--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "test": "NODE_ENV=test DOTENV_CONFIG_PATH=./_test.env jest --setupFiles dotenv/config --runInBand --verbose",
         "clean": "rm -r docker/node/tmp/_app; rm -r docker/node/tmp/dist; rm docker/node/tmp/package*.json",
         "build": "npm install && npx tsc && npm install --prefix app_funds && npm run build --prefix app_funds && cp -r app_funds/build ./docker/node/tmp/_app && cp package*.json ./docker/node/tmp/",
-        "docker": "docker compose up -d --build && docker image prune -f",
+        "dockerPrune": "docker image prune -f && docker volume prune -f",
+        "docker": "docker compose up -d --build",
         "resetdb": "psql postgresql://postgres:pw20220501@localhost:5432/app_funds -c 'drop schema public cascade; create schema public;'",
         "initdb": "npx ts-node src/database/initializeDB.ts",
         "resetTestDB": "psql postgresql://postgres:pw20220501@localhost:5432/app_funds_test -c 'drop schema public cascade; create schema public;'",
