--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
             - postgres
             - redis
         restart: "no"
+        ports:
+            - "3333:3000"
         volumes:
           - static:/usr/src/app/_app
           - ssh_keys:/usr/src/app/docker/node
