--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -8,7 +8,7 @@ ssl_password_file /etc/keys/global.pass;
 #     listen 80;
 
 #     location /api/v1/ {
-#         proxy_pass https://koa;
+#         proxy_pass http://koa;
 #         proxy_set_header Host $http_host;
 #         proxy_set_header X-Real-IP $remote_addr;
 #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -32,7 +32,7 @@ server {
     ssl_session_timeout 10m;
 
     location /api/v1/ {
-        proxy_pass https://koa;
+        proxy_pass http://koa;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
