Nginx settings for create-react-app (check)

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -14,12 +14,10 @@ ssl_password_file /etc/keys/global.pass;
 #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 #         proxy_redirect off;
 #     }
-
 #     location / {
 #         alias /home/static/;
 #     }
 # }
-
 server {
     listen 443 ssl;
     keepalive_timeout 70;
@@ -39,7 +37,26 @@ server {
         proxy_redirect off;
     }
 
+    root /home/static;
+    
+    location ~* \.(?:manifest|appcache|html?|xml|json)$ {
+        expires -1;
+    }
+
+    location ~* \.(?:css|js)$ {
+        try_files $uri =404;
+        expires 1y;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    # Any route containing a file extension (e.g. /devicesfile.js)
+    location ~ ^.+\..+$ {
+        try_files $uri =404;
+    }
+
+    # Any route that doesn't have a file extension (e.g. /devices)
     location / {
-        alias /home/static/;
+        try_files $uri $uri/ /index.html;
     }
 }
