--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -4,20 +4,6 @@ upstream koa {
 
 ssl_password_file /etc/keys/global.pass;
 
-# server {
-#     listen 80;
-
-#     location /api/v1/ {
-#         proxy_pass http://koa;
-#         proxy_set_header Host $http_host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_redirect off;
-#     }
-#     location / {
-#         alias /home/static/;
-#     }
-# }
 server {
     listen 443 ssl;
     keepalive_timeout 70;
@@ -29,7 +15,8 @@ server {
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
-    location /api/v1/ {
+    # Any route that start with /api/v1 goes directly to API server:
+    location ^~ /api/v1/ {
         proxy_pass http://koa;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -38,24 +25,24 @@ server {
     }
 
     root /home/static;
-    
-    location ~* \.(?:manifest|appcache|html?|xml|json)$ {
+
+    location ~* \.(html|json|txt)$ {
         expires -1;
     }
 
-    location ~* \.(?:css|js)$ {
+    # CSS/JS and their map files are public and cached for one day
+    location ~* \.(css|js|map)$ {
         try_files $uri =404;
-        expires 1y;
-        access_log off;
+        expires 24h;
         add_header Cache-Control "public";
     }
 
-    # Any route containing a file extension (e.g. /devicesfile.js)
+    # Any route containing a file extension
     location ~ ^.+\..+$ {
         try_files $uri =404;
     }
 
-    # Any route that doesn't have a file extension (e.g. /devices)
+    # Any route that doesn't have a file extension (e.g., react app URLs)
     location / {
         try_files $uri $uri/ /index.html;
     }
