Wrap Express Morgan

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "koa-jwt": "^4.0.3",
         "koa-static": "^5.0.0",
         "lodash": "^4.17.21",
+        "morgan": "^1.10.0",
         "pg": "^8.7.3",
         "reflect-metadata": "^0.1.13",
         "supertest": "^6.2.3",
@@ -49,6 +50,7 @@
         "@types/koa-bodyparser": "^4.3.7",
         "@types/koa-static": "^4.0.2",
         "@types/lodash": "^4.14.182",
+        "@types/morgan": "^1.9.3",
         "@types/supertest": "^2.0.12",
         "jest": "^28.1.1",
         "nodemon": "^2.0.18",
