--- a/package.json
+++ b/package.json
@@ -1,60 +1,64 @@
 {
-    "name": "test",
-    "version": "1.0.0",
-    "type": "commonjs",
-    "description": "",
-    "main": "app.js",
-    "scripts": {
-        "start": "node dist/server.js",
-        "dev": "npx nodemon",
-        "test": "NODE_ENV=test DOTENV_CONFIG_PATH=./_test.env jest --setupFiles dotenv/config --runInBand --verbose",
-        "clean": "rm -r docker/node/tmp/_app; rm -r docker/node/tmp/dist; rm docker/node/tmp/package*.json",
-        "build": "npm install && npx tsc && npm install --prefix app_funds && npm run build --prefix app_funds && cp -r app_funds/build ./docker/node/tmp/_app && cp package*.json ./docker/node/tmp/",
-        "dockerPrune": "docker image prune -f && docker volume prune -f",
-        "docker": "docker compose up -d --build",
-        "resetdb": "psql postgresql://postgres:pw20220501@localhost:5432/app_funds -c 'drop schema public cascade; create schema public;'",
-        "initdb": "npx ts-node src/database/initializeDB.ts",
-        "resetTestDB": "psql postgresql://postgres:pw20220501@localhost:5432/app_funds_test -c 'drop schema public cascade; create schema public;'",
-        "resetProdDB": "psql postgresql://postgres:pw20220501@localhost:5432/app_funds_prod -c 'drop schema public cascade; create schema public;'",
-        "initProdDB": "node dist/database/initializeDB.js",
-        "flushRedis": "redis-cli -a pw20220501 flushall"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@koa/router": "^10.1.1",
-        "@ts-koa/koa-morgan": "^0.0.3",
-        "bcrypt": "^5.0.1",
-        "bullmq": "^1.86.4",
-        "dotenv": "^16.0.1",
-        "jsonwebtoken": "^8.5.1",
-        "koa": "^2.13.4",
-        "koa-bodyparser": "^4.3.0",
-        "koa-jwt": "^4.0.3",
-        "koa-static": "^5.0.0",
-        "lodash": "^4.17.21",
-        "pg": "^8.7.3",
-        "reflect-metadata": "^0.1.13",
-        "supertest": "^6.2.3",
-        "typeorm": "^0.3.6",
-        "winston": "^3.7.2",
-        "winston-daily-rotate-file": "^4.6.1"
-    },
-    "devDependencies": {
-        "@types/bcrypt": "^5.0.0",
-        "@types/ioredis": "^4.28.10",
-        "@types/jest": "^28.1.3",
-        "@types/jsonwebtoken": "^8.5.8",
-        "@types/koa": "^2.13.4",
-        "@types/koa__router": "^8.0.11",
-        "@types/koa-bodyparser": "^4.3.7",
-        "@types/koa-static": "^4.0.2",
-        "@types/lodash": "^4.14.182",
-        "@types/supertest": "^2.0.12",
-        "jest": "^28.1.1",
-        "nodemon": "^2.0.18",
-        "ts-jest": "^28.0.5",
-        "ts-node": "^10.8.1",
-        "typescript": "^4.7.4"
-    }
+  "name": "test",
+  "version": "1.0.0",
+  "type": "commonjs",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "start": "node dist/server.js",
+    "dev": "npx nodemon",
+    "test": "NODE_ENV=test DOTENV_CONFIG_PATH=./_test.env jest --setupFiles dotenv/config --runInBand --verbose",
+    "clean": "rm -r docker/node/tmp/_app; rm -r docker/node/tmp/dist; rm docker/node/tmp/package*.json",
+    "build": "npm install && npx tsc && npm install --prefix app_funds && npm run build --prefix app_funds && cp -r app_funds/build ./docker/node/tmp/_app && cp package*.json ./docker/node/tmp/",
+    "dockerPrune": "docker image prune -f && docker volume prune -f",
+    "docker": "docker compose up -d --build",
+    "resetdb": "psql postgresql://postgres:pw20220501@localhost:5432/app_funds -c 'drop schema public cascade; create schema public;'",
+    "initdb": "npx ts-node src/database/initializeDB.ts",
+    "resetTestDB": "psql postgresql://postgres:pw20220501@localhost:5432/app_funds_test -c 'drop schema public cascade; create schema public;'",
+    "resetProdDB": "psql postgresql://postgres:pw20220501@localhost:5432/app_funds_prod -c 'drop schema public cascade; create schema public;'",
+    "initProdDB": "node dist/database/initializeDB.js",
+    "flushRedis": "redis-cli -a pw20220501 flushall",
+    "lint": "npx eslint src"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@koa/router": "^10.1.1",
+    "@ts-koa/koa-morgan": "^0.0.3",
+    "bcrypt": "^5.0.1",
+    "bullmq": "^1.86.4",
+    "dotenv": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
+    "koa-jwt": "^4.0.3",
+    "koa-static": "^5.0.0",
+    "lodash": "^4.17.21",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
+    "supertest": "^6.2.3",
+    "typeorm": "^0.3.6",
+    "winston": "^3.7.2",
+    "winston-daily-rotate-file": "^4.6.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/ioredis": "^4.28.10",
+    "@types/jest": "^28.1.3",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/koa": "^2.13.4",
+    "@types/koa__router": "^8.0.11",
+    "@types/koa-bodyparser": "^4.3.7",
+    "@types/koa-static": "^4.0.2",
+    "@types/lodash": "^4.14.182",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.1",
+    "nodemon": "^2.0.18",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0"
+  }
 }
